--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -13,32 +13,32 @@ jobs:
     name: Build package
     runs-on: ubuntu-latest
     container:
-      image: ubuntu:16.04
+      image: ubuntu:18.04
     steps:
-      - name: Install dependencies
-        run: |
-          apt update -y
-          apt install --no-install-recommends -y \
-            curl ca-certificates make gcc g++ clang-4.0 pkg-config git
-
-      - name: Install rust toolchain
+      # - name: Install dependencies
+      #   run: |
+      #     apt update -y
+      #     apt install --no-install-recommends -y \
+      #       curl ca-certificates make gcc g++ clang-4.0 pkg-config git
+      - name: Install Rust toolchain
         uses: actions-rs/toolchain@v1
         with:
           toolchain: ${{ env.RUST_TOOLCHAIN }}
-
       - name: Fetch latest code
         uses: actions/checkout@v3
-
       - name: Build
-        run: cargo build --release --target x86_64-unknown-linux-gnu
-
+        uses: actions-rs/cargo@v1
+        with:
+          command: build
+          args: --release --locked --target x86_64-unknown-linux-gnu
       - name: Collect shared
         run: |
           mkdir -p shared
-          tar cjSf shared/darwinia-collator-x86_64-linux-gnu.tar.bz2 \
-            -C target/x86_64-unknown-linux-gnu/release \
+          tar cjSf \
+            shared/darwinia-collator-x86_64-linux-gnu.tar.bz2 \
+            -C \
+            target/x86_64-unknown-linux-gnu/release \
             darwinia-collator
-
       - name: Upload shared
         uses: actions/upload-artifact@v2
         with:
@@ -50,30 +50,26 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build-package]
     steps:
-      - uses: actions/checkout@v3
-
-      - uses: actions/download-artifact@v2
-        with:
-          name: bridger-artifact
-          path: shared
-
+      - name: Fetch latest code
+        uses: actions/checkout@v3
       - name: Docker login
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.QUAY_IO_BOT_USERNAME }}
           password: ${{ secrets.QUAY_IO_BOT_PASSWORD }}
           registry: quay.io
-
-      - uses: benjlevesque/short-sha@v1.2
-        id: short-sha
+      - name: Download shared
+        uses: actions/download-artifact@v2
         with:
-          length: 7
-
-      - name: Extract package
+          name: bridger-artifact
+          path: shared
+      - name: Extract shared
         run: |
           mkdir -p dist
           tar -xvf shared/darwinia-collator-x86_64-linux-gnu.tar.bz2 -C dist/
-
+      - name: Hash
+        uses: benjlevesque/short-sha@v1.2
+        id: short-sha
       - name: Build and publish docker image
         run: |
           IMAGE_NAME=darwinia-collator
