--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,16 +38,23 @@ jobs:
           args: --release --locked --target x86_64-unknown-linux-gnu
       - name: Collect shared
         run: |
-          mkdir -p shared
+          mkdir -p shared/crab-parachain-runtime
+          mkdir -p shared/darwinia-parachain-runtime
           tar cjSf \
             shared/darwinia-collator-x86_64-linux-gnu.tar.bz2 \
             -C \
             target/x86_64-unknown-linux-gnu/release \
             darwinia-collator
+          tar cf shared/darwinia-collator-x86_64-linux-gnu.tar.zst \
+            -C \
+            target/x86_64-unknown-linux-gnu/release \
+            darwinia-collator -I pzstd
+          mv target/x86_64-unknown-linux-gnu/release/wbuild/crab-parachain-runtime/*.wasm shared/crab-parachain-runtime
+          mv target/x86_64-unknown-linux-gnu/release/wbuild/darwinia-parachain-runtime/*.wasm shared/darwinia-parachain-runtime
       - name: Upload shared
         uses: actions/upload-artifact@v2
         with:
-          name: bridger-artifact
+          name: darwinia-artifact
           path: shared
 
   ##
