--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,7 +35,7 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: build
-          args: --release --locked --target x86_64-unknown-linux-gnu
+          args: --release --locked
       - name: Collect shared
         run: |
           mkdir -p shared/crab-parachain-runtime
@@ -43,14 +43,18 @@ jobs:
           tar cjSf \
             shared/darwinia-collator-x86_64-linux-gnu.tar.bz2 \
             -C \
-            target/x86_64-unknown-linux-gnu/release \
+            target/release \
             darwinia-collator
           tar cf shared/darwinia-collator-x86_64-linux-gnu.tar.zst \
             -C \
-            target/x86_64-unknown-linux-gnu/release \
+            target/release \
             darwinia-collator -I pzstd
-          mv target/x86_64-unknown-linux-gnu/release/wbuild/crab-parachain-runtime/*.compressed.wasm shared/crab-parachain-runtime
-          mv target/x86_64-unknown-linux-gnu/release/wbuild/darwinia-parachain-runtime/*.compressed.wasm shared/darwinia-parachain-runtime
+          mv \
+            target/release/wbuild/crab-parachain-runtime/*.compressed.wasm \
+            shared/crab-parachain-runtime
+          mv \
+            target/release/wbuild/darwinia-parachain-runtime/*.compressed.wasm \
+            shared/darwinia-parachain-runtime
       - name: Upload shared
         uses: actions/upload-artifact@v2
         with:
@@ -161,10 +165,10 @@ jobs:
           mv shared/darwinia-collator-x86_64-linux-gnu.tar.bz2 deploy/
           mv shared/darwinia-collator-x86_64-linux-gnu.tar.zst deploy/
 
-          mv shared/crab-parachain-runtime/*.compact.compressed.wasm deploy/
-          mv shared/crab-parachain-runtime/*.compact.compressed.json deploy/
-          mv shared/darwinia-parachain-runtime/*.compact.compressed.wasm deploy/
-          mv shared/darwinia-parachain-runtime/*.compact.compressed.json deploy/
+          mv shared/crab-parachain-runtime/*.compressed.wasm deploy/
+          mv shared/crab-parachain-runtime/*.compressed.json deploy/
+          mv shared/darwinia-parachain-runtime/*.compressed.wasm deploy/
+          mv shared/darwinia-parachain-runtime/*.compressed.json deploy/
       - name: Hash file
         run: |
           (cd deploy && sha256sum * | tee sha256sums.txt)
