--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -31,14 +31,14 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: build
-          args: --release --locked --target x86_64-unknown-linux-gnu
+          args: --release --locked
       - name: Collect shared
         run: |
           mkdir -p shared
           tar cjSf \
             shared/darwinia-collator-x86_64-linux-gnu.tar.bz2 \
             -C \
-            target/x86_64-unknown-linux-gnu/release \
+            target/release \
             darwinia-collator
       - name: Upload shared
         uses: actions/upload-artifact@v2
