--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,40 +17,44 @@ jobs:
     name: Build package
     runs-on: ubuntu-latest
     container:
-      image: ubuntu:16.04
+      image: ubuntu:18.04
     steps:
       - name: Install dependencies
         run: |
           apt update -y
           apt install --no-install-recommends -y \
-            curl ca-certificates make gcc g++ clang-4.0 \
-            pkg-config git bzip2 zstd
-
-      - name: Install rust toolchain
+            ca-certificates curl git \
+            clang make gcc g++
+      - name: Install Rust toolchain
         uses: actions-rs/toolchain@v1
         with:
           toolchain: ${{ env.RUST_TOOLCHAIN }}
-
       - name: Fetch latest code
         uses: actions/checkout@v3
-
       - name: Build
-        run: cargo build --release --target x86_64-unknown-linux-gnu
-
+        uses: actions-rs/cargo@v1
+        with:
+          command: build
+          args: --release --locked
       - name: Collect shared
         run: |
           mkdir -p shared/crab-parachain-runtime
           mkdir -p shared/darwinia-parachain-runtime
-          tar cjSf shared/darwinia-collator-x86_64-linux-gnu.tar.bz2 \
-            -C target/x86_64-unknown-linux-gnu/release \
+          tar cjSf \
+            shared/darwinia-collator-x86_64-linux-gnu.tar.bz2 \
+            -C \
+            target/release \
             darwinia-collator
           tar cf shared/darwinia-collator-x86_64-linux-gnu.tar.zst \
-            -C target/x86_64-unknown-linux-gnu/release \
+            -C \
+            target/release \
             darwinia-collator -I pzstd
-
-          mv target/x86_64-unknown-linux-gnu/release/wbuild/crab-parachain-runtime/*.wasm shared/crab-parachain-runtime
-          mv target/x86_64-unknown-linux-gnu/release/wbuild/darwinia-parachain-runtime/*.wasm shared/darwinia-parachain-runtime
-
+          mv \
+            target/release/wbuild/crab-parachain-runtime/*.compressed.wasm \
+            shared/crab-parachain-runtime
+          mv \
+            target/release/wbuild/darwinia-parachain-runtime/*.compressed.wasm \
+            shared/darwinia-parachain-runtime
       - name: Upload shared
         uses: actions/upload-artifact@v2
         with:
@@ -69,11 +73,11 @@ jobs:
         runtime: [crab-parachain-runtime, darwinia-parachain-runtime]
       max-parallel: 1
     steps:
-      - uses: actions/download-artifact@v2
+      - name: Download shared
+        uses: actions/download-artifact@v2
         with:
           name: darwinia-artifact
           path: shared
-
       - name: Install subwasm
         env:
           # Currently, Same with srtool version v0.9.22
@@ -86,10 +90,7 @@ jobs:
             subwasm --version
       - name: Generate subwasm info for ${{ matrix.runtime }}
         run: |
-          WASM=shared/${{ matrix.runtime }}/*.compact.wasm
           Z_WASM=shared/${{ matrix.runtime }}/*.compact.compressed.wasm
-          echo '${{ matrix.runtime }} compact subwasm info'
-          subwasm -j info $WASM | tee shared/${{ matrix.runtime }}/${{ matrix.runtime }}.compact.json
           echo '${{ matrix.runtime }} compressed compact subwasm info'
           subwasm -j info $Z_WASM | tee shared/${{ matrix.runtime }}/${{ matrix.runtime }}.compact.compressed.json
       - name: Upload shared
@@ -106,32 +107,31 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build-package]
     steps:
-      - uses: actions/checkout@v3
-
-      - uses: actions/download-artifact@v2
+      - name: Fetch latest code
+        uses: actions/checkout@v3
+      - name: Download shared
+        uses: actions/download-artifact@v2
         with:
           name: darwinia-artifact
           path: shared
-
       - name: Docker login
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.QUAY_IO_BOT_USERNAME }}
           password: ${{ secrets.QUAY_IO_BOT_PASSWORD }}
           registry: quay.io
-
-      - uses: olegtarasov/get-tag@v2.1
+      - name: Get tag
+        uses: olegtarasov/get-tag@v2.1
         id: tag-name
-      - uses: benjlevesque/short-sha@v1.2
+      - name: Hash commit
+        uses: benjlevesque/short-sha@v1.2
         id: short-sha
         with:
           length: 7
-
-      - name: Extract package
+      - name: Extract shared
         run: |
           mkdir -p dist
           tar -xvf shared/darwinia-collator-x86_64-linux-gnu.tar.bz2 -C dist/
-
       - name: Build and publish docker image
         run: |
           IMAGE_NAME=darwinia-collator
@@ -151,13 +151,13 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build-subwasm, build-docker-image]
     steps:
-      - uses: actions/checkout@v3
-
-      - uses: actions/download-artifact@v2
+      - name: Fetch latest code
+        uses: actions/checkout@v3
+      - name: Download shared
+        uses: actions/download-artifact@v2
         with:
           name: darwinia-artifact
           path: shared
-
       - name: Prepare deploy folder
         run: |
           mkdir -p deploy
@@ -165,22 +165,21 @@ jobs:
           mv shared/darwinia-collator-x86_64-linux-gnu.tar.bz2 deploy/
           mv shared/darwinia-collator-x86_64-linux-gnu.tar.zst deploy/
 
-          mv shared/crab-parachain-runtime/*.compact.compressed.wasm deploy/
-          mv shared/crab-parachain-runtime/*.compact.compressed.json deploy/
-          mv shared/darwinia-parachain-runtime/*.compact.compressed.wasm deploy/
-          mv shared/darwinia-parachain-runtime/*.compact.compressed.json deploy/
-
+          mv shared/crab-parachain-runtime/*.compressed.wasm deploy/
+          mv shared/crab-parachain-runtime/*.compressed.json deploy/
+          mv shared/darwinia-parachain-runtime/*.compressed.wasm deploy/
+          mv shared/darwinia-parachain-runtime/*.compressed.json deploy/
       - name: Hash file
         run: |
           (cd deploy && sha256sum * | tee sha256sums.txt)
-
-      - uses: olegtarasov/get-tag@v2.1
+      - name: Get tag
+        uses: olegtarasov/get-tag@v2.1
         id: tag-name
-      - uses: benjlevesque/short-sha@v1.2
+      - name: Hash commit
+        uses: benjlevesque/short-sha@v1.2
         id: short-sha
         with:
           length: 7
-
       - name: Generate template data
         run: |
           REGEX_RUNTIME_VERSION='s/.*-\([0-9]*\)[ ].*/\1/g'
@@ -208,13 +207,11 @@ jobs:
               tag: $tag,
               sha: $sha
             }' | tee template_data.json
-
       - name: Render release page
         uses: jayamanikharyono/jinja-action@v0.1
         with:
           datafile: template_data.json
           path: .github/release-template.md
-
       - name: Publish github release
         uses: softprops/action-gh-release@v1
         with:
