--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,14 +41,14 @@ jobs:
           mkdir -p shared/crab-parachain-runtime
           mkdir -p shared/darwinia-parachain-runtime
           tar cjSf \
-            shared/darwinia-collator-x86_64-linux-gnu.tar.bz2 \
+            shared/darwinia-parachain-x86_64-linux-gnu.tar.bz2 \
             -C \
             target/release \
-            darwinia-collator
-          tar cf shared/darwinia-collator-x86_64-linux-gnu.tar.zst \
+            darwinia-parachain
+          tar cf shared/darwinia-parachain-x86_64-linux-gnu.tar.zst \
             -C \
             target/release \
-            darwinia-collator -I pzstd
+            darwinia-parachain -I pzstd
           mv \
             target/release/wbuild/crab-parachain-runtime/*.compressed.wasm \
             shared/crab-parachain-runtime
@@ -80,8 +80,8 @@ jobs:
           path: shared
       - name: Install subwasm
         env:
-          # Currently, Same with srtool version v0.9.22
-          # https://github.com/paritytech/srtool/blob/v0.9.22/Dockerfile#L19
+          # Currently, Same with srtool version v0.9.25
+          # https://github.com/paritytech/srtool/blob/v0.9.25/Dockerfile#L19
           SUBWASM_VERSION: 0.15.0
         run: |
           curl -L https://github.com/chevdor/subwasm/releases/download/v${SUBWASM_VERSION}/subwasm_linux_amd64_v${SUBWASM_VERSION}.deb \
@@ -131,10 +131,10 @@ jobs:
       - name: Extract shared
         run: |
           mkdir -p dist
-          tar -xvf shared/darwinia-collator-x86_64-linux-gnu.tar.bz2 -C dist/
+          tar -xvf shared/darwinia-parachain-x86_64-linux-gnu.tar.bz2 -C dist/
       - name: Build and publish docker image
         run: |
-          IMAGE_NAME=darwinia-collator
+          IMAGE_NAME=darwinia-parachain
           IMAGE_PREFIX=quay.io/darwinia-network
           IMAGE_PUSH_NAME_TAG=${IMAGE_PREFIX}/${IMAGE_NAME}:${GIT_TAG_NAME}
           IMAGE_PUSH_NAME_SHA=${IMAGE_PREFIX}/${IMAGE_NAME}:sha-${SHA}
@@ -162,8 +162,8 @@ jobs:
         run: |
           mkdir -p deploy
 
-          mv shared/darwinia-collator-x86_64-linux-gnu.tar.bz2 deploy/
-          mv shared/darwinia-collator-x86_64-linux-gnu.tar.zst deploy/
+          mv shared/darwinia-parachain-x86_64-linux-gnu.tar.bz2 deploy/
+          mv shared/darwinia-parachain-x86_64-linux-gnu.tar.zst deploy/
 
           mv shared/crab-parachain-runtime/*.compressed.wasm deploy/
           mv shared/crab-parachain-runtime/*.compressed.json deploy/
