--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -19,8 +19,8 @@ jobs:
         run: |
           apt update -y
           apt install --no-install-recommends -y \
-            ca-certificates curl git \
-            clang python3-pip make gcc g++
+            ca-certificates curl git python3-pip python3-setuptools \
+            clang make gcc g++
           pip3 install cmake --upgrade
       - name: Install Rust toolchain
         uses: actions-rs/toolchain@v1
