--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -19,9 +19,10 @@ jobs:
         run: |
           apt update -y
           apt install --no-install-recommends -y \
-            ca-certificates curl git python3-pip python3-setuptools \
+            ca-certificates curl git python3-pip \
             clang make gcc g++
-          sudo pip3 install cmake --upgrade
+          pip3 install setuptools
+          pip3 install cmake --upgrade
       - name: Install Rust toolchain
         uses: actions-rs/toolchain@v1
         with:
