--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -25,7 +25,7 @@ jobs:
           apt install --no-install-recommends -y \
             ca-certificates curl git \
             clang make gcc g++
-          pip3 install cmake --upgrade
+          pip install cmake --upgrade
       - name: Install Rust toolchain
         uses: actions-rs/toolchain@v1
         with:
