--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -15,16 +15,13 @@ jobs:
     container:
       image: ubuntu:18.04
     steps:
-      - name: Install Python 3.10
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.10"
       - name: Install dependencies
         run: |
           apt update -y
           apt install --no-install-recommends -y \
-            ca-certificates curl git \
+            ca-certificates curl git python3-pip \
             clang make gcc g++
+          pip3 install --upgrade pip
           pip3 install cmake --upgrade
       - name: Install Rust toolchain
         uses: actions-rs/toolchain@v1
