--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -19,8 +19,10 @@ jobs:
         run: |
           apt update -y
           apt install --no-install-recommends -y \
-            ca-certificates curl git \
-            clang cmake make gcc g++
+            ca-certificates curl git python3-pip \
+            clang make gcc g++
+          pip3 install --upgrade pip
+          pip3 install cmake --upgrade
       - name: Install Rust toolchain
         uses: actions-rs/toolchain@v1
         with:
