--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,7 @@ jobs:
         run: |
           apt update -y
           apt install --no-install-recommends -y \
-            ca-certificates curl git python3-pip \
+            ca-certificates curl git python3-pip zstd \
             clang make gcc g++
           pip3 install --upgrade pip
           pip3 install cmake --upgrade
