--- a/runtime/common/Cargo.toml
+++ b/runtime/common/Cargo.toml
@@ -13,6 +13,7 @@ version     = "5.3.3"
 # crates.io
 array-bytes    = { version = "3.0" }
 codec          = { package = "parity-scale-codec", version = "3.1", default-features = false, features = ["derive"] }
+ethereum       = { version = "0.11.1", default-features = false, features = ["with-codec"] }
 ethereum-types = { version = "0.12", default-features = false }
 scale-info     = { version = "2.0", default-features = false, features = ["derive"] }
 smallvec       = { version = "1.8" }
