--- a/runtime/common/Cargo.toml
+++ b/runtime/common/Cargo.toml
@@ -13,8 +13,9 @@ version     = "5.3.3"
 # crates.io
 array-bytes    = { version = "3.0" }
 codec          = { package = "parity-scale-codec", version = "3.1", default-features = false, features = ["derive"] }
-ethereum       = { version = "0.11.1", default-features = false, features = ["with-codec"] }
-ethereum-types = { version = "0.12", default-features = false }
+ethereum       = { version = "0.12", default-features = false, features = ["with-codec"] }
+ethereum-types = { version = "0.13.1", default-features = false, features = ["rlp", "codec"] }
+ethabi         = { version = "17.0", default-features = false }
 scale-info     = { version = "2.0", default-features = false, features = ["derive"] }
 smallvec       = { version = "1.8" }
 # cumulus
@@ -51,6 +52,8 @@ default = ["std"]
 std = [
 	# crates.io
 	"codec/std",
+	"ethabi/std",
+	"ethereum/std",
 	"ethereum-types/std",
 	"scale-info/std",
 	# cumulus
