--- a/runtime/common/Cargo.toml
+++ b/runtime/common/Cargo.toml
@@ -45,6 +45,7 @@ xcm-executor = { default-features = false, git = "https://github.com/paritytech/
 [dev-dependencies]
 pallet-timestamp = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
 sp-io            = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
+hex              = { version = "0.4.3"}
 
 [features]
 default = ["std"]
