--- a/runtime/common/Cargo.toml
+++ b/runtime/common/Cargo.toml
@@ -48,6 +48,7 @@ xcm-executor                = { default-features = false, git = "https://github.
 
 [dev-dependencies]
 pallet-timestamp = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
+sp-io            = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
 
 [features]
 default = ["std"]
