--- a/runtime/common/Cargo.toml
+++ b/runtime/common/Cargo.toml
@@ -50,7 +50,8 @@ xcm-executor                = { default-features = false, git = "https://github.
 
 [dev-dependencies]
 pallet-timestamp = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
-hex = { version = "0.4.3"}
+hex              = { version = "0.4.3"}
+sp-io            = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
 
 [features]
 default = ["std"]
